fix applogo z-index

--- a/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
+++ b/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
@@ -23,5 +23,7 @@
 }
 
 .cat {
-  fill: var(--icon-v2)
+  fill: var(--icon-v2);
+  position: relative;
+  z-index: 10;
 }
